--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <div class="p1">
 <p style="color: white; text-size: 3;">Ketene ( CH2CO ) - Molecular Weight : 42.04</p1>
   
-<img src="Ketene.jpeg" width="110" height="85">
+<img src="ketene.jpeg" width="110" height="85">
 
 
   
