--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="main.js"></script>
   
 
-  <title>Alkali Metals and Alkaline Earth Metals</title>
+  <title>Wolff Rearrangement</title>
   
 
 
